# wordbrain

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSES.md  README.md  next.config.ts  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.cargo/: config.toml
.claude/skills/wordbrain-release/: SKILL.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
docs/: release-testing.md
homebrew/: wordbrain.rb
scripts/: README.md  batch-phases.ts  build-ecdict-db.py  claude-runner.ts  publish.sh  test-runner.ts  test-updater.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: en_50k_freq.json  subtlex_us_freq.json
src-tauri/capabilities/: default.json
src-tauri/capabilities-dev/: dev-connector.json
src-tauri/crates/resource-manager/: Cargo.toml
src-tauri/crates/resource-manager/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: keys.rs  lib.rs  main.rs
src-tauri/src/ai/: chain.rs  cli_provider.rs  mod.rs
src-tauri/src/ai/prompts/: mcq_explanation.rs  mod.rs  story.rs  synonyms.rs  writing_grade.rs
src-tauri/src/commands/: dict.rs  keys.rs  materials.rs  mod.rs  network.rs  profile.rs  settings.rs  srs.rs  stats.rs  story.rs  usage.rs  words.rs  writing.rs
src-tauri/src/db/: cache.rs  custom_dicts.rs  dict.rs  lookup_history.rs  materials.rs  mod.rs  names.rs  network.rs  profile.rs  schema.rs  settings.rs  srs.rs  stats.rs  story.rs  usage.rs  words.rs  writing.rs
src-tauri/src/parsers/: epub.rs  mod.rs
src-tauri/tests/: dict_test.rs  epub_test.rs  materials_test.rs  network_test.rs  persistence_test.rs  srs_test.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/lib/: ai-models.ts  ai.ts  ipc.ts  lookup-history.ts  material-builder.ts  names.ts  srs.ts
src/app/stores/: learningStore.ts  settingsStore.ts  srsStore.ts  themeStore.ts  usageStore.ts  wordStore.ts
src/types/: ambient.d.ts
(+72 files in other folders)
