[package]
name = "wordbrain"
version = "0.2.1"
description = "WordBrain — local-first English vocabulary builder"
authors = ["Peilin Wu"]
edition = "2021"

[lib]
name = "wordbrain_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
tokio = { version = "1", features = ["fs", "io-util", "process", "sync", "rt-multi-thread"] }
chrono = "0.4"
lazy_static = "1.4"
turso = "0.6.0-pre"
log = "0.4"
futures-util = "0.3"
anyhow = "1"
sha1 = "0.10"
tauri-plugin-stronghold = "2"
url = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
# AI provider chain (ai/cli_provider.rs, ai/chain.rs)
thiserror = "1"
tempfile = "3"
which = "6"

# tauri-plugin-connector ships dev-only instrumentation that pulls xcap →
# libspa/pipewire (Linux) and extra connector dependencies transitively. Kept
# behind the opt-in `dev-connector` feature so
# `tauri build` (release) never compiles it. `bun run tauri:dev` enables the
# feature (see package.json).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-connector = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[features]
default = []
dev-connector = ["dep:tauri-plugin-connector"]
